--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
- <div>
     
   <!------------------------ Шапка -------------------------->
 
@@ -17,9 +18,9 @@
         <a href="./index.html" class="header-logo accent">Web<span class="hl-second">Studio</span>
         </a>
         <ul class="site-nav">
-            <li><a href="">Студия</a></li>
-            <li><a href="">Портфолио</a></li>
-            <li><a href="">Контакты</a></li>
+            <li><a href="./index.html" class="link current">Студия</a></li>
+            <li><a href="./portfolio.html" class="link">Портфолио</a></li>
+            <li><a href="" class="link">Контакты</a></li>
         </ul> 
     </nav>
     <ul >
@@ -27,7 +28,7 @@
         <li><a href="tel:+380961111111" class="contact">+38 096 111 11 11</a></li>
     </ul>
   </header> 
- </div>
+
   <!----------------------Герой------------------->
 
   <Main>
